--- a/ContosoUniversity/Views/Students/Delete.cshtml
+++ b/ContosoUniversity/Views/Students/Delete.cshtml
@@ -1,7 +1,7 @@
 @model ContosoUniversity.Models.Student
 
 @{
-    ViewData["Title"] = "Delete studens";
+    ViewData["Title"] = "Delete";
 }
 
 <h2>Delete</h2>
